--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ section{
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background: url(./background\ portofolio.png) no-repeat;
+    background: url(.\background\ portofolio.png) no-repeat;
     background-size: cover;
     background-position: center;
 background-attachment: fixed;  /* background is constant */
